fixed word wrap for too long usernames

--- a/frontend/src/assets/scss/game-view/_scoreboard.scss
+++ b/frontend/src/assets/scss/game-view/_scoreboard.scss
@@ -32,7 +32,7 @@
 		align-items: center;
 		width: 90%;
 		padding: 10px;
-		margin-bottom: 50px;
+		margin-bottom: 1rem;
 	}
 
 	#players {
@@ -56,6 +56,8 @@
 			align-items: center;
 			justify-content: center;
 			margin-top: 0.2rem;
+			width: 100%;
+			overflow-wrap: anywhere;
 		}
 
 		.points {
@@ -78,7 +80,6 @@
 
 		#player-1-name {
 			font-style: italic;
-
 		}
 
 		#player-2-name {
